Tweak release notes.

--- a/javarifier.html
+++ b/javarifier.html
@@ -789,7 +789,7 @@ Javarifier now works on the Eclipse compiler, which is over
   </ul>
   </li>
   <li>
-  Version ?.?.?: (Released ? ?, ?)
+  Version 0.1.4: (Released August 31, 2010)
     <ul>
       <li>Implemented and documented the heuristics for excluding fields
            from the abstract state of an object.
@@ -802,8 +802,10 @@ Javarifier now works on the Eclipse compiler, which is over
       <li>Removed some unnecessary and uninformative messages from output.
       </li>
       <li>Command-line options now start with a double-dash prefix instead
-          of a single-dash prefix.  Run "javarifier -h" for a list, or
-          "javarifier -H" for a full list.
+          of a single-dash prefix.  Run <tt>javarifier -h</tt> for a list, or
+          <tt>javarifier -H</tt> for a full list.
+      </li>
+      <li>Many small bug fixes.
       </li>
     </ul>
   </li>
