--- a/javarifier.html
+++ b/javarifier.html
@@ -36,7 +36,7 @@
         </ul></li>
       <li><a href="#building-from-source">Building from source</a>
         <ul>
-          <li><a href="#building-with-eclipse">Building with Eclipse</a></li>
+          <li><a href="#compiling-with-eclipse">Compiling with Eclipse</a></li>
         </ul></li>
       <li><a href="#feedback">Feedback</a>
         <ul>
@@ -133,8 +133,8 @@ return types.
 <p> The following instructions assume either a Linux or Windows
 command-line environment.  </p>
 
-<p> The current distribution is <code>Javarifier version 0.1.3</code>,
-released April 27, 2008.  </p>
+<p> The current distribution is <code>Javarifier version 0.1.4</code>,
+released August 31, 2010.  </p>
 
 <ol>
 <li>
@@ -744,7 +744,7 @@ Some additional notes appear in the <tt>README</tt> file.
 </p>
 
 
-<h3 id="building-with-eclipse">Building with Eclipse</h3>
+<h3 id="compiling-with-eclipse">Compiling with Eclipse</h3>
 
 <p>
 The structure of the <tt>src/</tt> and <tt>bin/</tt> directories is such
