Javarifier assumes that the Checker Framework is already installed.

--- a/javarifier.html
+++ b/javarifier.html
@@ -130,11 +130,18 @@ return types.
 
 <h2 id="installation">Installation</h2>
 
-<p> The following instructions assume either a Linux or Windows
-command-line environment.  </p>
-
-<p> The current distribution is <code>Javarifier version 0.1.4</code>,
+<p> The current distribution is <b>Javarifier version 0.1.4</b>,
 released August 31, 2010.  </p>
+
+<p>
+The following instructions assume either a Unix-like (e.g., Linux, Mac) or
+Windows command-line environment.
+</p>
+
+<p>
+It is assumed that you have already installed the Checker Framework, which
+you will need to type-check the Javari annotations that Javarifier outputs.
+</p>
 
 <ol>
 <li>
@@ -186,7 +193,7 @@ and append to it the <code>javarifier</code> directory.
 
 
 <h2 id="using">Using Javarifier</h2> <p> The following instructions
-are for running <code>javarifier</code> on a Linux machine.  The
+are for running <code>javarifier</code> on a Unix-like machine.  The
 instructions are the same for Windows, except the tool is
 <code>javarifier.bat</code>, and you must use Windows path names
 instead of Unix path names.  </p>
