Remove plume-lib directory, add plume.jar

--- a/javarifier.html
+++ b/javarifier.html
@@ -853,7 +853,7 @@ Javarifier now works on the Eclipse compiler, which is over
       </li>
       <li>Many bug fixes to code, build files, and tests.
       </li>
-      <li>Uses plume-lib.
+      <li>Uses plume-lib (<tt>plume.jar</tt> added to <tt>lib/</tt>).
       </li>
     </ul>
   </li>
