--- a/javarifier.html
+++ b/javarifier.html
@@ -723,20 +723,19 @@ hg clone https://annotation-tools.googlecode.com/hg annotation-tools
 hg clone https://javarifier.googlecode.com/hg/ javarifier</pre>
   </li>
   <li>Build everything.  If any of the builds fails, consult that project's documentation.
-<pre>cd $JSR308/jsr308-langtools/make
-ant clean build-javac build-javap
-cd $JSR308/checker-framework/checkers
-ant dist all-tests
-cd $JSR308/annotation-tools
-ant
-cd $JSR308/javarifier
-ant jarfile</pre>
-      Alternatively, you can run all the above commands via one command line:
-<pre>cd $JSR308/jsr308-langtools/make && ant clean build-javac build-javap && cd $JSR308/checker-framework/checkers && ant dist all-tests && cd $JSR308/annotation-tools && ant && cd $JSR308/javarifier && ant jarfile</pre>
-    (This is better than pasting all the commands into a shell for two
-    reasons.  First, it halts if there is any error.  Second, <tt>ant</tt>
-    seems to swallow all typeahead.)
-  </li>
+<pre>cd $JSR308/jsr308-langtools/make \
+&& ant clean build-javac build-javap \
+&& cd $JSR308/checker-framework/checkers \
+&& ant dist all-tests \
+&& cd $JSR308/annotation-tools \
+&& ant \
+&& cd $JSR308/javarifier \
+&& ant jarfile</pre>
+<!--
+    (The form with && is better than pasting a set of separate commands
+    into a shell for two reasons.  First, it halts if there is any error.
+    Second, <tt>ant</tt> seems to swallow all typeahead.)  --> 
+</li>
 </ol>
 
 <p>
