--- a/javarifier.html
+++ b/javarifier.html
@@ -131,7 +131,7 @@ return types.
 <h2 id="installation">Installation</h2>
 
 <p> The current distribution is <b>Javarifier version 0.1.4</b>,
-released August 31, 2010.  </p>
+released September 18, 2010.  </p>
 
 <p>
 The following instructions assume either a Unix-like (e.g., Linux, Mac) or
@@ -749,8 +749,10 @@ cd $JSR308/annotation-tools
 hg pull -u
 cd $JSR308/javarifier
 hg pull -u
-cd $JSR308/jsr308-langtools/make && ant clean build-javac build-javap && cd $JSR308/checker-framework/checkers && ant dist all-tests && cd $JSR308/annotation-tools && ant && cd $JSR308/javarifier && ant jarfile</pre>
-
+</pre>
+<p>
+and re-run the "Build everything" command immediately above.
+</p>
 
 <p>
 Some additional notes appear in the <tt>README</tt> file.
@@ -822,7 +824,7 @@ Javarifier now works on the Eclipse compiler, which is over
   </ul>
   </li>
   <li>
-  Version 0.1.4: (Released August 31, 2010)
+  Version 0.1.4: (Released September 18, 2010)
     <ul>
       <li>Implemented and documented the heuristics for excluding fields
            from the abstract state of an object.
