--- a/javarifier.html
+++ b/javarifier.html
@@ -58,7 +58,7 @@ variables are never used for side effects.
 Javarifier infers the immutability of every
 reference in a Java program,
 using the definition of the
-<a href="http://groups.csail.mit.edu/pag/javari/">Javari</a> language.
+<a href="http://types.cs.washington.edu/javari/">Javari</a> language.
 In other words, it converts Java programs and
 libraries to Javari.
 </p>
@@ -156,7 +156,7 @@ Windows command-line environment.
 </li>
 <li>
   Download
-  <a href="http://types.cs.washington.edu/javarifier/javarifier.zip">javarifier.zip</a>.
+  <a href="http://types.cs.washington.edu/javari/javarifier/javarifier.zip">javarifier.zip</a>.
 </li>
 
 <li>
