Fix "Last revised" date.

--- a/javarifier.html
+++ b/javarifier.html
@@ -853,7 +853,7 @@ Javarifier now works on the Eclipse compiler, which is over
 <hr/>
 
 <p>
-Last revised: August 31, 2010
+Last revised: September 20, 2010
 </p>
 
 </body>
@@ -868,44 +868,27 @@ Local Variables:
 time-stamp-start: "^Last revised: "
 time-stamp-end: "\\.?$"
 time-stamp-format: "%:b %:d, %:y"
-time-stamp-line-limit: -50
+time-stamp-line-limit: -100
 End:
 -->
 
-<!--  LocalWords:  utils bashrc tcsh tcshrc cshrc classpath Javarifier Javari
- -->
-<!--  LocalWords:  mutabilities subtyping contra javarifier zipfile csh GG im
- -->
-<!--  LocalWords:  Javarifier's Tschantz jarfiles programCPEntries LGraph JVML
- -->
-<!--  LocalWords:  romaybe LocalVariableTypeTable typecheck setenv myPackage cd
- -->
-<!--  LocalWords:  myClassOne myClassTwo perl jaif myClass applyHeuristics TODO
- -->
-<!--  LocalWords:  dumpCauses readonly ClassName LineNumber methodName hashMap
- -->
-<!--  LocalWords:  MemberName dumpConstraints ctx classfile HashEntry boolean
- -->
-<!--  LocalWords:  allHelp reallyQuiet openWorld polyread stubCPEntries jsr hg
- -->
-<!--  LocalWords:  worldCPEntries useWorldAsStubs extraAnnotationInputFile src
- -->
-<!--  LocalWords:  filename outputFile outputFormat annotationIndexFile dirname
- -->
-<!--  LocalWords:  scenePrinter twoFiles outputFilterLocals outputLimitKind xml
- -->
-<!--  LocalWords:  outputSortMembers outputMainClassFirst skipEmpty ReadOnly
- -->
-<!--  LocalWords:  includeImmutableClasses justPassThrough printStubs readlink
- -->
-<!--  LocalWords:  missingStubs dumpResults dumpGeneratorConstraints debugStubs
- -->
-<!--  LocalWords:  dumpBoundGuards dumpParamCons dumpStubCons dumpSubtypeCons
- -->
-<!--  LocalWords:  dumpOpenWorldCons debugLocalSplitting debugResolver mkdir
- -->
-<!--  LocalWords:  debugResolve debugTypeInference debugBoundGuarder langtools
- -->
+<!--  LocalWords:  utils bashrc tcsh tcshrc cshrc classpath Javarifier Javari -->
+<!--  LocalWords:  mutabilities subtyping contra javarifier zipfile csh GG im -->
+<!--  LocalWords:  Javarifier's Tschantz jarfiles programCPEntries LGraph JVML -->
+<!--  LocalWords:  romaybe LocalVariableTypeTable typecheck setenv myPackage cd -->
+<!--  LocalWords:  myClassOne myClassTwo perl jaif myClass applyHeuristics TODO -->
+<!--  LocalWords:  dumpCauses readonly ClassName LineNumber methodName hashMap -->
+<!--  LocalWords:  MemberName dumpConstraints ctx classfile HashEntry boolean -->
+<!--  LocalWords:  allHelp reallyQuiet openWorld polyread stubCPEntries jsr hg -->
+<!--  LocalWords:  worldCPEntries useWorldAsStubs extraAnnotationInputFile src -->
+<!--  LocalWords:  filename outputFile outputFormat annotationIndexFile dirname -->
+<!--  LocalWords:  scenePrinter twoFiles outputFilterLocals outputLimitKind xml -->
+<!--  LocalWords:  outputSortMembers outputMainClassFirst skipEmpty ReadOnly -->
+<!--  LocalWords:  includeImmutableClasses justPassThrough printStubs readlink -->
+<!--  LocalWords:  missingStubs dumpResults dumpGeneratorConstraints debugStubs -->
+<!--  LocalWords:  dumpBoundGuards dumpParamCons dumpStubCons dumpSubtypeCons -->
+<!--  LocalWords:  dumpOpenWorldCons debugLocalSplitting debugResolver mkdir -->
+<!--  LocalWords:  debugResolve debugTypeInference debugBoundGuarder langtools -->
 <!--  LocalWords:  debugSubtyping debugConstraintGeneration debugConstraints
  -->
 <!--  LocalWords:  debugSigParser debugConstraintIncorporating javap jarfile
