Add --printMissingStubs option.

--- a/javarifier.html
+++ b/javarifier.html
@@ -646,9 +646,9 @@ To run the test suite, do <em>any one</em> of the following commands:
  the results back out.  Use this mode to convert manual annotations to a
  form in which they can be compared to Javarifier annotations. [default false]</li>
       <li><b>--printStubs=</b><i>boolean</i>. Do not perform inference.  Just output a list of classes for which stubs
- are needed to perform inference.  In the future, an option such as
- <tt>--missingStubs</tt> may be added, which only outputs a list of stubs
- that are needed but missing. [default false]</li>
+ are needed to perform inference. [default false]</li>
+      <li><b>--printMissingStubs=</b><i>boolean</i>. Do not perform inference.  Just output a list of classes which are needed
+ to perform inference but missing. [default false]</li>
     </ul>
   </li>
   <li>Verbosity Options
