--- a/javarifier.html
+++ b/javarifier.html
@@ -704,26 +704,28 @@ To build Javarifier from source, run the following commands:
 
 <ol>
   <li>Set environment variables.  Add the following to your
-    <tt>~/.bashrc</tt> or equivalent, then log out and log back in:
-<pre>export JSR308=$HOME/jsr308
+    <tt>~/.bashrc</tt> or equivalent. Set the <tt>JAVA_HOME</tt> environment variable
+to the location of your JDK 6 or 7 installation (not the JRE installation). Then log out and log back in:
+<pre>export JAVA_HOME=/path/to/your/jdk</em>
+export JSR308=$HOME/jsr308
 export PATH=$JSR308/jsr308-langtools/dist/bin:${PATH}
-export CLASSPATH=${CLASSPATH}:<em>...JAVA_HOME...</em>/lib/tools.jar:$JSR308/checker-framework/checkers/checkers.jar</pre>
+export CLASSPATH=${CLASSPATH}:$JAVA_HOME/lib/tools.jar:$JSR308/checker-framework/checkers/checkers.jar</pre>
   </li>
   <li>Obtain the source code.
 <pre>mkdir -p $JSR308
 cd $JSR308
 hg clone https://jsr308-langtools.googlecode.com/hg/ jsr308-langtools
-hg clone https://checker-framework.googlecode.com/hg/ checker-framework
 hg clone https://annotation-tools.googlecode.com/hg annotation-tools
+hg clone https://checker-framework.googlecode.com/hg/ checker-framework
 hg clone https://javarifier.googlecode.com/hg/ javarifier</pre>
   </li>
   <li>Build everything.  If any of the builds fails, consult that project's documentation.
 <pre>cd $JSR308/jsr308-langtools/make \
 && ant clean build-javac build-javap \
-&& cd $JSR308/checker-framework/checkers \
-&& ant dist all-tests \
 && cd $JSR308/annotation-tools \
 && ant \
+&& cd $JSR308/checker-framework/checkers \
+&& ant dist all-tests \
 && cd $JSR308/javarifier \
 && ant jarfile</pre>
 <!--
@@ -739,9 +741,9 @@ Later, to update all your sources and rebuild them, you can run:
 <pre>
 cd $JSR308/jsr308-langtools
 hg pull -u
-cd $JSR308/checker-framework
-hg pull -u
 cd $JSR308/annotation-tools
+hg pull -u
+cd $JSR308/checker-framework
 hg pull -u
 cd $JSR308/javarifier
 hg pull -u
