Fix HTML error.

--- a/javarifier.html
+++ b/javarifier.html
@@ -706,7 +706,7 @@ To build Javarifier from source, run the following commands:
   <li>Set environment variables.  Add the following to your
     <tt>~/.bashrc</tt> or equivalent. Set the <tt>JAVA_HOME</tt> environment variable
 to the location of your JDK 6 or 7 installation (not the JRE installation). Then log out and log back in:
-<pre>export JAVA_HOME=/path/to/your/jdk</em>
+<pre>export JAVA_HOME=<em>/path/to/your/jdk</em>
 export JSR308=$HOME/jsr308
 export PATH=$JSR308/jsr308-langtools/dist/bin:${PATH}
 export CLASSPATH=${CLASSPATH}:$JAVA_HOME/lib/tools.jar:$JSR308/checker-framework/checkers/checkers.jar</pre>
@@ -860,7 +860,7 @@ can be sent to <a href="mailto:javarifier-dev@googlegroups.com">javarifier-dev@g
 <hr/>
 
 <p>
-Last revised: March 17, 2011
+Last revised: April 7, 2011
 </p>
 
 </body>
