Update URLs into the Checker Framework manual.

--- a/javarifier.html
+++ b/javarifier.html
@@ -136,7 +136,7 @@ Windows command-line environment.
 <ol>
 <li value="0">
   Install the
-  <a href="http://types.cs.washington.edu/checker-framework/#installation">Checker
+  <a href="http://types.cs.washington.edu/checker-framework/current/checkers-manual.html#installation">Checker
   Framework</a> and the
   <a href="http://types.cs.washington.edu/annotation-file-utilities/#installation">Annotation
   File Utilities</a>, in sibling directories; for example,
