--- a/javarifier.html
+++ b/javarifier.html
@@ -714,10 +714,10 @@ export CLASSPATH=${CLASSPATH}:$JAVA_HOME/lib/tools.jar:$JSR308/checker-framework
   <li>Obtain the source code.
 <pre>mkdir -p $JSR308
 cd $JSR308
-hg clone https://jsr308-langtools.googlecode.com/hg/ jsr308-langtools
-hg clone https://annotation-tools.googlecode.com/hg annotation-tools
-hg clone https://checker-framework.googlecode.com/hg/ checker-framework
-hg clone https://javarifier.googlecode.com/hg/ javarifier</pre>
+hg clone https://code.google.com/p/jsr308-langtools/ jsr308-langtools
+hg clone https://code.google.com/p/annotation-tools/ annotation-tools
+hg clone https://code.google.com/p/checker-framework/ checker-framework
+hg clone https://code.google.com/p/javarifier/ javarifier</pre>
   </li>
   <li>Build everything.  If any of the builds fails, consult that project's documentation.
 <pre>cd $JSR308/jsr308-langtools/make \
@@ -860,7 +860,7 @@ can be sent to <a href="mailto:javarifier-dev@googlegroups.com">javarifier-dev@g
 <hr/>
 
 <p>
-Last revised: April 7, 2011
+Last revised: January 1, 2012
 </p>
 
 </body>
