--- a/javarifier.html
+++ b/javarifier.html
@@ -74,7 +74,7 @@ Javarifier can produce a textual output file, or can annotate
 <code>.class</code> files with backward-compatible attributes.  The
 algorithm for inferring Javari reference immutability is explained in the
 paper
-<a href="http://www.cs.washington.edu/homes/mernst/pubs/infer-refimmutability-ecoop2008-abstract.html">"Inference
+<a href="http://homes.cs.washington.edu/~mernst/pubs/infer-refimmutability-ecoop2008-abstract.html">"Inference
   of reference immutability"</a>, which appeared at ECOOP 2008.
 </p>
 
@@ -370,7 +370,7 @@ can indicate a bug in Javarifier.
 <p>
 For more details about the constraints beyond this section of the manual,
 see the paper
-<a href="http://www.cs.washington.edu/homes/mernst/pubs/infer-refimmutability-ecoop2008-abstract.html">"Inference
+<a href="http://homes.cs.washington.edu/~mernst/pubs/infer-refimmutability-ecoop2008-abstract.html">"Inference
 of reference immutability"</a>.  Contact us if you need more help
 understanding the constraints.
 </p>
@@ -548,7 +548,7 @@ mutable in the end.)
   ctx:m represents the romaybe-context that the constraint is referring
   to; this
   is used for inferring romaybe (see the paper
-  <a href="http://www.cs.washington.edu/homes/mernst/pubs/infer-refimmutability-ecoop2008-abstract.html">"Inference
+  <a href="http://homes.cs.washington.edu/~mernst/pubs/infer-refimmutability-ecoop2008-abstract.html">"Inference
 of reference immutability"</a> for details).
   Often the constraints are the same across contexts, so
   you might have the following two constraints:
@@ -860,7 +860,7 @@ can be sent to <a href="mailto:javarifier-dev@googlegroups.com">javarifier-dev@g
 <hr/>
 
 <p>
-Last revised: January 1, 2012
+Last revised: September 17, 2012
 </p>
 
 </body>
